--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Snekkk</title>
   </head>
   <body>
     <div id="root"></div>
